Исправлены замечания, добавлены фолбеки